[package]
name = "phenotune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "1.0.0"
rubato = "0.14.0"
rand = "0.8.5"
realfft = "3.3.0"
rayon = "1.7.0"
itertools = "0.11.0"
rand_distr = "0.4.3"
log = "0.4.19"
fern = "0.6.2"
